--- a/kalibrierung.ipynb
+++ b/kalibrierung.ipynb
@@ -17,8 +17,8 @@
    "id": "d29415ec",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-25T14:31:14.280076700Z",
-     "start_time": "2023-11-25T14:31:14.028796200Z"
+     "end_time": "2023-12-01T13:24:44.467184500Z",
+     "start_time": "2023-12-01T13:24:43.793865700Z"
     }
    },
    "outputs": [
@@ -54,8 +54,8 @@
    "id": "9006c957",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-25T14:31:17.056743800Z",
-     "start_time": "2023-11-25T14:31:16.893380Z"
+     "end_time": "2023-12-01T13:24:44.932327200Z",
+     "start_time": "2023-12-01T13:24:44.456702800Z"
     }
    },
    "outputs": [
@@ -177,6 +177,52 @@
    "id": "2f4f61e3274c52ad"
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# use the 20 calibration images in the folder /img/Udacity/calib\n",
+    "# find the chessboard corners in the images\n",
+    "# append the corners to the list \"objpoints\"\n",
+    "# append the image points to the list \"imgpoints\"\n",
+    "objpoints = [] # 3D points in real world space\n",
+    "imgpoints = [] # 2D points in image plane\n",
+    "\n",
+    "calibration_imgs = [cv.imread(img) for img in os.listdir('./img/Udacity/calib') if img.endswith('.jpg')]\n",
+    "\n",
+    "for img in calibration_imgs:\n",
+    "    gray = cv.cvtColor(img, cv.COLOR_BGR2GRAY)\n",
+    "    ret, corners = cv.findChessboardCorners(gray, GRID_SIZE, None)\n",
+    "    if ret == True:\n",
+    "        objpoints.append(np.zeros((GRID_SIZE[0]*GRID_SIZE[1], 3), np.float32))\n",
+    "        objpoints[-1][:,:2] = np.mgrid[0:GRID_SIZE[0], 0:GRID_SIZE[1]].T.reshape(-1,2)\n",
+    "        imgpoints.append(corners),\n",
+    "        img = cv.drawChessboardCorners(img, GRID_SIZE, corners, ret)\n",
+    "        plt.imshow(img)\n",
+    "        plt.show()"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "dea09e2cc8408add"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# calibrate camera\n",
+    "ret, mtx, dist, rvecs, tvecs = cv.calibrateCamera(objpoints, imgpoints, calibration_imgs[0].shape[0:2], None, None)\n",
+    "\n",
+    "# store calibration for transformation later in file\n",
+    "np.savez('./img/Udacity/calib/calibration.npz', mtx=mtx, dist=dist)"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "373ceb66477ccf6f"
+  },
+  {
    "cell_type": "markdown",
    "id": "65719edd",
    "metadata": {},
@@ -223,9 +269,14 @@
     "plt.title('Spurmarkierungen')\n",
     "plt.show()\n",
     "\n",
+    "#load calibration\n",
+    "calibration = np.load('./img/Udacity/calib/calibration.npz')\n",
+    "\n",
     "# definieren Sie die für eine Perspektivtransformation notwendigen Quell- und Zielpunkte\n",
-    "src = np.float32(...)\n",
-    "dst = np.float32(...)\n",
+    "# src = np.float32(...)\n",
+    "# dst = np.float32(...)\n",
+    "src = np.float32([[0, 720], [1280, 720], [0, 0], [1280, 0]])\n",
+    "dst = np.float32([[0, 720], [1280, 720], [0, 0], [1280, 0]])\n",
     "\n",
     "M = cv.getPerspectiveTransform(src,dst)\n",
     "img1_warp = cv.warpPerspective(img1,M,(img1.shape[1], img1.shape[0]))\n",
