schritt für schritt notebook

--- a/lane_detection.ipynb
+++ b/lane_detection.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 112,
    "outputs": [
     {
      "data": {
@@ -54,8 +54,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-10T18:58:35.212933400Z",
-     "start_time": "2023-12-10T18:58:34.855836500Z"
+     "end_time": "2023-12-10T19:06:32.975716900Z",
+     "start_time": "2023-12-10T19:06:32.580490700Z"
     }
    },
    "id": "7453796cb4c78ece"
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 113,
    "outputs": [
     {
      "data": {
@@ -93,8 +93,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-10T18:58:35.473661900Z",
-     "start_time": "2023-12-10T18:58:35.126622300Z"
+     "end_time": "2023-12-10T19:06:33.198916900Z",
+     "start_time": "2023-12-10T19:06:32.899831400Z"
     }
    },
    "id": "b937cb81be952565"
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 114,
    "outputs": [
     {
      "data": {
@@ -131,8 +131,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-10T18:58:35.581900300Z",
-     "start_time": "2023-12-10T18:58:35.400965400Z"
+     "end_time": "2023-12-10T19:06:33.361346200Z",
+     "start_time": "2023-12-10T19:06:33.162664900Z"
     }
    },
    "id": "34ffe5c633112b38"
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 115,
    "outputs": [
     {
      "data": {
@@ -169,8 +169,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-10T18:58:35.759115800Z",
-     "start_time": "2023-12-10T18:58:35.583945400Z"
+     "end_time": "2023-12-10T19:06:33.560870900Z",
+     "start_time": "2023-12-10T19:06:33.357341900Z"
     }
    },
    "id": "cffbae5b1b511781"
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 116,
    "outputs": [
     {
      "data": {
@@ -207,8 +207,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-10T18:58:35.922945Z",
-     "start_time": "2023-12-10T18:58:35.752057100Z"
+     "end_time": "2023-12-10T19:06:33.763288900Z",
+     "start_time": "2023-12-10T19:06:33.546778300Z"
     }
    },
    "id": "17e79107da5c0050"
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 117,
    "outputs": [
     {
      "data": {
@@ -245,8 +245,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-10T18:58:36.072347100Z",
-     "start_time": "2023-12-10T18:58:35.912417300Z"
+     "end_time": "2023-12-10T19:06:33.921443Z",
+     "start_time": "2023-12-10T19:06:33.747182200Z"
     }
    },
    "id": "c4f340afd398623e"
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 118,
    "outputs": [
     {
      "data": {
@@ -283,8 +283,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-10T18:58:36.233065900Z",
-     "start_time": "2023-12-10T18:58:36.074359Z"
+     "end_time": "2023-12-10T19:06:34.064682600Z",
+     "start_time": "2023-12-10T19:06:33.907912500Z"
     }
    },
    "id": "b0d19fea09d0c6ae"
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 119,
    "outputs": [
     {
      "data": {
@@ -313,16 +313,16 @@
     }
    ],
    "source": [
-    "img = calib.warp_to_birdseye(img)\n",
+    "img_birdseyeview = calib.warp_to_birdseye(img)\n",
     "\n",
-    "plt.imshow(img, cmap='gray')\n",
+    "plt.imshow(img_birdseyeview, cmap='gray')\n",
     "plt.show()"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-10T18:58:36.384114200Z",
-     "start_time": "2023-12-10T18:58:36.226923500Z"
+     "end_time": "2023-12-10T19:06:34.215553Z",
+     "start_time": "2023-12-10T19:06:34.058150900Z"
     }
    },
    "id": "35fab31568cde004"
@@ -339,31 +339,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 129,
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "too many values to unpack (expected 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mValueError\u001B[0m                                Traceback (most recent call last)",
-      "Cell \u001B[1;32mIn[38], line 3\u001B[0m\n\u001B[0;32m      1\u001B[0m LaneDetection \u001B[38;5;241m=\u001B[39m main\u001B[38;5;241m.\u001B[39mLaneDetection()\n\u001B[1;32m----> 3\u001B[0m left_line, right_line \u001B[38;5;241m=\u001B[39m \u001B[43mLaneDetection\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mseperate_lines_on_thresh\u001B[49m\u001B[43m(\u001B[49m\u001B[43mimg\u001B[49m\u001B[43m)\u001B[49m\n",
-      "File \u001B[1;32m~\\Projects\\digitale_bildverarbeitung_projekt\\conventional_lane_detection\\src\\main.py:239\u001B[0m, in \u001B[0;36mLaneDetection.seperate_lines_on_thresh\u001B[1;34m(self, img)\u001B[0m\n\u001B[0;32m    237\u001B[0m middle_left \u001B[38;5;241m=\u001B[39m middle \u001B[38;5;241m-\u001B[39m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mwidth \u001B[38;5;241m/\u001B[39m\u001B[38;5;241m/\u001B[39m \u001B[38;5;241m8\u001B[39m\n\u001B[0;32m    238\u001B[0m middle_right \u001B[38;5;241m=\u001B[39m middle \u001B[38;5;241m+\u001B[39m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mwidth \u001B[38;5;241m/\u001B[39m\u001B[38;5;241m/\u001B[39m \u001B[38;5;241m8\u001B[39m\n\u001B[1;32m--> 239\u001B[0m right_y, right_x \u001B[38;5;241m=\u001B[39m np\u001B[38;5;241m.\u001B[39mwhere(img[:, middle_right:] \u001B[38;5;241m==\u001B[39m \u001B[38;5;241m255\u001B[39m)\n\u001B[0;32m    240\u001B[0m left_y, left_x \u001B[38;5;241m=\u001B[39m np\u001B[38;5;241m.\u001B[39mwhere(img[:, :middle_left] \u001B[38;5;241m==\u001B[39m \u001B[38;5;241m255\u001B[39m)\n\u001B[0;32m    241\u001B[0m right_x \u001B[38;5;241m+\u001B[39m\u001B[38;5;241m=\u001B[39m middle_right\n",
-      "\u001B[1;31mValueError\u001B[0m: too many values to unpack (expected 2)"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
      ]
     }
    ],
    "source": [
     "LaneDetection = main.LaneDetection()\n",
     "\n",
-    "left_line, right_line = LaneDetection.seperate_lines_on_thresh(img)"
+    "left_line, right_line = LaneDetection.seperate_lines_on_thresh(img_birdseyeview)\n",
+    "print( left_line)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-10T18:58:57.410514400Z",
-     "start_time": "2023-12-10T18:58:57.310672400Z"
+     "end_time": "2023-12-10T19:09:19.427247Z",
+     "start_time": "2023-12-10T19:09:19.329702600Z"
     }
    },
    "id": "c782cb41a7a8aa63"
@@ -380,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 121,
    "outputs": [],
    "source": [
     "fit_left_line, fit_right_line, real_left, real_right = LaneDetection._fit_lane_lines(right_line, left_line)"
@@ -388,8 +384,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-10T18:59:29.861141900Z",
-     "start_time": "2023-12-10T18:59:29.773278700Z"
+     "end_time": "2023-12-10T19:06:34.356664400Z",
+     "start_time": "2023-12-10T19:06:34.337309100Z"
     }
    },
    "id": "ba6243e6d4f22e19"
@@ -406,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 122,
    "outputs": [
     {
      "name": "stdout",
@@ -424,8 +420,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-10T18:59:31.255942500Z",
-     "start_time": "2023-12-10T18:59:31.200873400Z"
+     "end_time": "2023-12-10T19:06:34.357668200Z",
+     "start_time": "2023-12-10T19:06:34.341597200Z"
     }
    },
    "id": "dd37be06582ea168"
@@ -442,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 123,
    "outputs": [
     {
      "data": {
@@ -463,22 +459,22 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-10T18:59:32.920483900Z",
-     "start_time": "2023-12-10T18:59:32.680102300Z"
+     "end_time": "2023-12-10T19:06:34.870424900Z",
+     "start_time": "2023-12-10T19:06:34.355660600Z"
     }
    },
    "id": "5a7e211d965ba849"
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 123,
    "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-10T18:58:36.805000700Z",
-     "start_time": "2023-12-10T18:58:36.797464300Z"
+     "end_time": "2023-12-10T19:06:34.870938200Z",
+     "start_time": "2023-12-10T19:06:34.817423100Z"
     }
    },
    "id": "2f8d7d05021240eb"
